2002-12-05  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-preferred-driver.in: Added the "gdi" and "pbmtozjs"
	  drivers to the ranking in "foomatic-preferred-driver", tolerate
	  not having a preferred driver when there is a "Paperweight" with
	  drivers assigned to it.
	
2002-12-04  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 2.9.0. 
	  Tag name: "foomatic-db-engine-2_9_0".
	
2002-12-03  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm, foomatic-perl-data.c: First preparations
	  for collective options, let these options being skipped for
	  2.9.0 release, so that collective options can be added to the
	  database before 2.9.1 without 2.9.0 breaking. Let options with
	  unknown execution style being skipped in general.
	
2002-11-29  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 2.9.0pre1. 
	  Tag name: "foomatic-db-engine-2_9_0pre1".
	
	* README: Added list of implemented and planned features for
	  Foomatic 3.0.

	* lib/Foomatic/DB.pm: Fixed calls of "dossy" line ends removal
	  ("undossify();") when reading the PPD file and quoted the
	  asterisk in "/^\*End/".

2002-11-28  Till Kamppeter <till.kamppeter@gmx.net>

	* Makefile.in, configure.in: Fixed connection to the other Foomatic
	  packages in both regular and "inplace" installation.

	  Insert absolute paths for the Perl library and database locations
	  in the "inplace" installation.

	  Set link to "foomatic-rip" into the source directory when
	  installing "inplace", so one can start all programs from
	  one directory.

	  Let files of "foomatic-templates" directory be installed into
	  /usr/share/foomatic/templates, so that "foomatic-addpjloptions"
	  also works with a regular installation (worked only "inplace"
	  before).

	* makeDefaults.in: Removed paths for old src/*omatic filters,
	  added path for "foomatic-rip" and for PPR daemon